Compilador/src/parser/compiler.jj
options
{
  static = false;
  DEBUG_PARSER = false;
}

PARSER_BEGIN(MeuParser)
package parser;

import java.io.*;

public class MeuParser {
    public static void main(String[] args) {
        try {
            if (args.length == 0) {
                System.out.println("Uso: java -cp bin parser.MeuParser <caminho_do_arquivo.c>");
                return;
            }
            // Lê o arquivo C passado como argumento
            MeuParser analisador = new MeuParser(new java.io.FileInputStream(args[0]));
            
            // Chama a regra principal da gramática
            analisador.Programa();
            
            System.out.println("\nSucesso! Nenhuma falha sintatica. O codigo C esta correto!");
        } catch (FileNotFoundException excecao) {
            System.out.println("\nErro: Arquivo nao encontrado.");
        } catch (ParseException excecao) {
            System.out.println("\nErro de Sintaxe: " + excecao.getMessage());
        } catch (TokenMgrError excecao) {
            System.out.println("\nErro Lexico: " + excecao.getMessage());
        }
    }
}
PARSER_END(MeuParser)

/* 1. CARACTERES IGNORADOS E COMENTÁRIOS */
SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
| < "//" (~["\n", "\r"])* ("\n" | "\r" | "\r\n") >
| < "/*" (~["*"])* "*" ("*" | ~["*", "/"] (~["*"])* "*")* "/" >
}

/* 2. DIRETIVAS DE PRÉ-PROCESSADOR */
TOKEN :
{
  < PRE_PROCESSADOR: "#" (["a"-"z", "A"-"Z"])+ > 
| < BIBLIOTECA_CABECALHO: "<" (["a"-"z", "A"-"Z", ".", "_"])+ ">" > 
}

/* 3. PALAVRAS RESERVADAS DO C */
TOKEN :
{
  < INTEIRO: "int" >
| < VAZIO: "void" >
| < CARACTERE: "char" >
| < FLUTUANTE: "float" >
| < SEM_SINAL: "unsigned" >
| < LONGO: "long" >         
| < RETORNO: "return" >
| < SE: "if" >
| < SENAO: "else" >
| < ENQUANTO: "while" >
| < PARA: "for" >
| < FACA: "do" >
| < PARE: "break" >
| < CONTINUAR: "continue" >
}

/* 4. OPERADORES E PONTUAÇÃO */
TOKEN :
{
  < INCREMENTO: "++" >        
| < DECREMENTO: "--" >        
| < ATRIBUICAO_SOMA: "+=" >      
| < ATRIBUICAO_SUBTRACAO: "-=" >    
| < ATRIBUICAO_MULTIPLICACAO: "*=" >  
| < ATRIBUICAO_DIVISAO: "/=" >    
| < E_LOGICO: "&&" >              
| < OU_LOGICO: "||" >              
| < IGUAL: "==" >              
| < DIFERENTE: "!=" >
| < MENOR_IGUAL: "<=" >              
| < MAIOR_IGUAL: ">=" >              
| < MAIS: "+" >
| < MENOS: "-" >
| < MULTIPLICACAO: "*" >          
| < DIVISAO: "/" >
| < ATRIBUICAO: "=" >
| < MENOR: "<" >
| < MAIOR: ">" >
| < E_BIT_A_BIT: "&" >       
| < OU_BIT_A_BIT: "|" >        
| < NAO: "!" >
| < PONTO_E_VIRGULA: ";" >
| < VIRGULA: "," >
| < ABRE_PARENTESES: "(" >
| < FECHA_PARENTESES: ")" >
| < ABRE_CHAVES: "{" >
| < FECHA_CHAVES: "}" >
| < ABRE_COLCHETES: "[" >
| < FECHA_COLCHETES: "]" >
}

/* 5. LITERAIS E IDENTIFICADORES */
TOKEN :
{
  < LITERAL_INTEIRO: (["0"-"9"])+ >
| < LITERAL_TEXTO: "\"" (~["\"", "\n", "\r"])* "\"" > 
| < IDENTIFICADOR: ["a"-"z", "A"-"Z", "_"] (["a"-"z", "A"-"Z", "_", "0"-"9"])* > 
}

/**************************************************
 * 6. GRAMÁTICA SINTÁTICA DA LINGUAGEM C
 **************************************************/

void Programa() : {} {
  ( Diretiva() )*
  ( DeclaracaoGlobal() )*
  <EOF>
}

void Diretiva() : {} {
  <PRE_PROCESSADOR> <BIBLIOTECA_CABECALHO>
}

void DeclaracaoGlobal() : {} {
  TiposDeDados() (<MULTIPLICACAO>)* <IDENTIFICADOR> ( InstanciarVariavel() | InstanciaFuncao() )
}

void InstanciarVariavel() : {} {
  ( <ATRIBUICAO> Expressao() )? ( <VIRGULA> (<MULTIPLICACAO>)* <IDENTIFICADOR> ( <ATRIBUICAO> Expressao() )? )* <PONTO_E_VIRGULA>
}

void InstanciaFuncao() : {} {
  <ABRE_PARENTESES> ListaDeParametros() <FECHA_PARENTESES> BlocoDeDeclaracoes()
}

void ListaDeParametros() : {} {
  ( TiposDeDados() (<MULTIPLICACAO>)* <IDENTIFICADOR> ( <VIRGULA> TiposDeDados() (<MULTIPLICACAO>)* <IDENTIFICADOR> )* )?
}

void BlocoDeDeclaracoes() : {} {
  <ABRE_CHAVES> (CorpoDaDeclaracao())* <FECHA_CHAVES>
}

void CorpoDaDeclaracao() : {} {
  // O LOOKAHEAD ajuda o parser a decidir entre declarar uma variável (ex: int x;) ou atribuir (ex: x = 1;)
  LOOKAHEAD(TiposDeDados()) DeclaracaoLocal()
  | AtribuicaoOuChamada()
  | RetornoDaFuncao()
  | Se_Senao()
  | Enquanto()
  | Para()
  | <PARE> <PONTO_E_VIRGULA>
  | <CONTINUAR> <PONTO_E_VIRGULA>
}

void DeclaracaoLocal() : {} {
  TiposDeDados() (<MULTIPLICACAO>)* <IDENTIFICADOR> InstanciarVariavel()
}

// Lida com operações que não necessariamente terminam em ponto-e-vírgula (útil para o FOR)
void ComandoExpressao() : {} {
  (<MULTIPLICACAO>)* <IDENTIFICADOR> (
      <ATRIBUICAO> Expressao()
    | <ATRIBUICAO_SOMA> Expressao()
    | <ATRIBUICAO_SUBTRACAO> Expressao()
    | <ATRIBUICAO_MULTIPLICACAO> Expressao()
    | <ATRIBUICAO_DIVISAO> Expressao()
    | <ABRE_PARENTESES> ListaDeArgumentos() <FECHA_PARENTESES>
    | <INCREMENTO>
    | <DECREMENTO>
  )
  | (<INCREMENTO> | <DECREMENTO>) <IDENTIFICADOR>
}

void AtribuicaoOuChamada() : {} {
  ComandoExpressao() <PONTO_E_VIRGULA>
}

void RetornoDaFuncao() : {} {
  <RETORNO> (Expressao())? <PONTO_E_VIRGULA>
}

void Se_Senao() : {} {
  <SE> <ABRE_PARENTESES> Expressao() <FECHA_PARENTESES> ComandoBlocoOuUnico()
  ( LOOKAHEAD(1) <SENAO> ComandoBlocoOuUnico() )?
}

// Permite executar um bloco { } ou uma linha única após um if/for/while
void ComandoBlocoOuUnico() : {} {
  BlocoDeDeclaracoes() | CorpoDaDeclaracao()
}

void Para() : {} {
  <PARA> <ABRE_PARENTESES> (ComandoExpressao())? <PONTO_E_VIRGULA> (Expressao())? <PONTO_E_VIRGULA> (ComandoExpressao())? <FECHA_PARENTESES> ComandoBlocoOuUnico()
}

void Enquanto() : {} {
  <ENQUANTO> <ABRE_PARENTESES> Expressao() <FECHA_PARENTESES> ComandoBlocoOuUnico()
}

// Mapeia todas as combinações de tipos, incluindo o seu 'unsigned long long'
void TiposDeDados() : {} {
    LOOKAHEAD(3) <SEM_SINAL> <LONGO> <LONGO>
  | LOOKAHEAD(2) <SEM_SINAL> <LONGO>
  | LOOKAHEAD(2) <SEM_SINAL> <INTEIRO>
  | <SEM_SINAL>
  | LOOKAHEAD(2) <LONGO> <LONGO>
  | <LONGO>
  | <INTEIRO>
  | <FLUTUANTE>
  | <CARACTERE>
  | <VAZIO>
}

void ListaDeArgumentos() : {} {
  (Expressao() ( <VIRGULA> Expressao() )*)?
}

// Hierarquia de expressões matemáticas e lógicas
void Expressao() : {} {
  item() (
    ( <MENOR> | <MAIOR> | <MENOR_IGUAL> | <MAIOR_IGUAL> | <IGUAL> | <DIFERENTE> | <E_LOGICO> | <OU_LOGICO> )
    item()
  )*
}

void item() : {} {
  termo() ( ( <MAIS> | <MENOS> ) termo() )*
}

void termo() : {} {
  itemUnico() ( ( <MULTIPLICACAO> | <DIVISAO> ) itemUnico() )*
}

void itemUnico() : {} {
  // Lida com operadores unários de C como ponteiros (* e &) e negações (! e -)
  ( <MAIS> | <MENOS> | <NAO> | <E_BIT_A_BIT> | <MULTIPLICACAO> )* Item()
}

void Item() : {} {
    <LITERAL_INTEIRO>
  | <LITERAL_TEXTO>
  // LOOKAHEAD para não confundir uma chamada de função 'nome()' com uma variável solta 'nome'
  | LOOKAHEAD(2) <IDENTIFICADOR> <ABRE_PARENTESES> ListaDeArgumentos() <FECHA_PARENTESES>
  | LOOKAHEAD(2) <IDENTIFICADOR> <ABRE_COLCHETES> Expressao() <FECHA_COLCHETES>
  | <IDENTIFICADOR>
  | <ABRE_PARENTESES> Expressao() <FECHA_PARENTESES>
}
