Compilador/src/parser/MeuParser.java
/* Generated By:JavaCC: Do not edit this line. MeuParser.java */
package parser;

import java.io.*;

public class MeuParser implements MeuParserConstants {
    public static void main(String[] args) {
        try {
            if (args.length == 0) {
                System.out.println("Uso: java -cp bin parser.MeuParser <caminho_do_arquivo.c>");
                return;
            }
            // Lê o arquivo C passado como argumento
            MeuParser analisador = new MeuParser(new java.io.FileInputStream(args[0]));

            // Chama a regra principal da gramática
            analisador.Programa();

            System.out.println("\nSucesso! Nenhuma falha sintatica. O codigo C esta correto!");
        } catch (FileNotFoundException excecao) {
            System.out.println("\nErro: Arquivo nao encontrado.");
        } catch (ParseException excecao) {
            System.out.println("\nErro de Sintaxe: " + excecao.getMessage());
        } catch (TokenMgrError excecao) {
            System.out.println("\nErro Lexico: " + excecao.getMessage());
        }
    }

/**************************************************
 * 6. GRAMÁTICA SINTÁTICA DA LINGUAGEM C
 **************************************************/
  final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRE_PROCESSADOR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Diretiva();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEIRO:
      case VAZIO:
      case CARACTERE:
      case FLUTUANTE:
      case SEM_SINAL:
      case LONGO:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      DeclaracaoGlobal();
    }
    jj_consume_token(0);
  }

  final public void Diretiva() throws ParseException {
    jj_consume_token(PRE_PROCESSADOR);
    jj_consume_token(BIBLIOTECA_CABECALHO);
  }

  final public void DeclaracaoGlobal() throws ParseException {
    TiposDeDados();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(MULTIPLICACAO);
    }
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
    case PONTO_E_VIRGULA:
    case VIRGULA:
      InstanciarVariavel();
      break;
    case ABRE_PARENTESES:
      InstanciaFuncao();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void InstanciarVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
      jj_consume_token(ATRIBUICAO);
      Expressao();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      jj_consume_token(VIRGULA);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLICACAO:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(MULTIPLICACAO);
      }
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        Expressao();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    }
    jj_consume_token(PONTO_E_VIRGULA);
  }

  final public void InstanciaFuncao() throws ParseException {
    jj_consume_token(ABRE_PARENTESES);
    ListaDeParametros();
    jj_consume_token(FECHA_PARENTESES);
    BlocoDeDeclaracoes();
  }

  final public void ListaDeParametros() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEIRO:
    case VAZIO:
    case CARACTERE:
    case FLUTUANTE:
    case SEM_SINAL:
    case LONGO:
      TiposDeDados();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLICACAO:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        jj_consume_token(MULTIPLICACAO);
      }
      jj_consume_token(IDENTIFICADOR);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_7;
        }
        jj_consume_token(VIRGULA);
        TiposDeDados();
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case MULTIPLICACAO:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_8;
          }
          jj_consume_token(MULTIPLICACAO);
        }
        jj_consume_token(IDENTIFICADOR);
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
  }

  final public void BlocoDeDeclaracoes() throws ParseException {
    jj_consume_token(ABRE_CHAVES);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEIRO:
      case VAZIO:
      case CARACTERE:
      case FLUTUANTE:
      case SEM_SINAL:
      case LONGO:
      case RETORNO:
      case SE:
      case ENQUANTO:
      case PARA:
      case PARE:
      case CONTINUAR:
      case INCREMENTO:
      case DECREMENTO:
      case MULTIPLICACAO:
      case IDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      CorpoDaDeclaracao();
    }
    jj_consume_token(FECHA_CHAVES);
  }

  final public void CorpoDaDeclaracao() throws ParseException {
    if (jj_2_1(2147483647)) {
      DeclaracaoLocal();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCREMENTO:
      case DECREMENTO:
      case MULTIPLICACAO:
      case IDENTIFICADOR:
        AtribuicaoOuChamada();
        break;
      case RETORNO:
        RetornoDaFuncao();
        break;
      case SE:
        Se_Senao();
        break;
      case ENQUANTO:
        Enquanto();
        break;
      case PARA:
        Para();
        break;
      case PARE:
        jj_consume_token(PARE);
        jj_consume_token(PONTO_E_VIRGULA);
        break;
      case CONTINUAR:
        jj_consume_token(CONTINUAR);
        jj_consume_token(PONTO_E_VIRGULA);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void DeclaracaoLocal() throws ParseException {
    TiposDeDados();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_10;
      }
      jj_consume_token(MULTIPLICACAO);
    }
    jj_consume_token(IDENTIFICADOR);
    InstanciarVariavel();
  }

// Lida com operações que não necessariamente terminam em ponto-e-vírgula (útil para o FOR)
  final public void ComandoExpressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULTIPLICACAO:
    case IDENTIFICADOR:
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLICACAO:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_11;
        }
        jj_consume_token(MULTIPLICACAO);
      }
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        Expressao();
        break;
      case ATRIBUICAO_SOMA:
        jj_consume_token(ATRIBUICAO_SOMA);
        Expressao();
        break;
      case ATRIBUICAO_SUBTRACAO:
        jj_consume_token(ATRIBUICAO_SUBTRACAO);
        Expressao();
        break;
      case ATRIBUICAO_MULTIPLICACAO:
        jj_consume_token(ATRIBUICAO_MULTIPLICACAO);
        Expressao();
        break;
      case ATRIBUICAO_DIVISAO:
        jj_consume_token(ATRIBUICAO_DIVISAO);
        Expressao();
        break;
      case ABRE_PARENTESES:
        jj_consume_token(ABRE_PARENTESES);
        ListaDeArgumentos();
        jj_consume_token(FECHA_PARENTESES);
        break;
      case INCREMENTO:
        jj_consume_token(INCREMENTO);
        break;
      case DECREMENTO:
        jj_consume_token(DECREMENTO);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case INCREMENTO:
    case DECREMENTO:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCREMENTO:
        jj_consume_token(INCREMENTO);
        break;
      case DECREMENTO:
        jj_consume_token(DECREMENTO);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(IDENTIFICADOR);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void AtribuicaoOuChamada() throws ParseException {
    ComandoExpressao();
    jj_consume_token(PONTO_E_VIRGULA);
  }

  final public void RetornoDaFuncao() throws ParseException {
    jj_consume_token(RETORNO);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAIS:
    case MENOS:
    case MULTIPLICACAO:
    case E_BIT_A_BIT:
    case NAO:
    case ABRE_PARENTESES:
    case LITERAL_INTEIRO:
    case LITERAL_TEXTO:
    case IDENTIFICADOR:
      Expressao();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_E_VIRGULA);
  }

  final public void Se_Senao() throws ParseException {
    jj_consume_token(SE);
    jj_consume_token(ABRE_PARENTESES);
    Expressao();
    jj_consume_token(FECHA_PARENTESES);
    ComandoBlocoOuUnico();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SENAO:
      jj_consume_token(SENAO);
      ComandoBlocoOuUnico();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

// Permite executar um bloco { } ou uma linha única após um if/for/while
  final public void ComandoBlocoOuUnico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_CHAVES:
      BlocoDeDeclaracoes();
      break;
    case INTEIRO:
    case VAZIO:
    case CARACTERE:
    case FLUTUANTE:
    case SEM_SINAL:
    case LONGO:
    case RETORNO:
    case SE:
    case ENQUANTO:
    case PARA:
    case PARE:
    case CONTINUAR:
    case INCREMENTO:
    case DECREMENTO:
    case MULTIPLICACAO:
    case IDENTIFICADOR:
      CorpoDaDeclaracao();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Para() throws ParseException {
    jj_consume_token(PARA);
    jj_consume_token(ABRE_PARENTESES);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCREMENTO:
    case DECREMENTO:
    case MULTIPLICACAO:
    case IDENTIFICADOR:
      ComandoExpressao();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_E_VIRGULA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAIS:
    case MENOS:
    case MULTIPLICACAO:
    case E_BIT_A_BIT:
    case NAO:
    case ABRE_PARENTESES:
    case LITERAL_INTEIRO:
    case LITERAL_TEXTO:
    case IDENTIFICADOR:
      Expressao();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_E_VIRGULA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCREMENTO:
    case DECREMENTO:
    case MULTIPLICACAO:
    case IDENTIFICADOR:
      ComandoExpressao();
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_PARENTESES);
    ComandoBlocoOuUnico();
  }

  final public void Enquanto() throws ParseException {
    jj_consume_token(ENQUANTO);
    jj_consume_token(ABRE_PARENTESES);
    Expressao();
    jj_consume_token(FECHA_PARENTESES);
    ComandoBlocoOuUnico();
  }

// Mapeia todas as combinações de tipos, incluindo o seu 'unsigned long long'
  final public void TiposDeDados() throws ParseException {
    if (jj_2_2(3)) {
      jj_consume_token(SEM_SINAL);
      jj_consume_token(LONGO);
      jj_consume_token(LONGO);
    } else if (jj_2_3(2)) {
      jj_consume_token(SEM_SINAL);
      jj_consume_token(LONGO);
    } else if (jj_2_4(2)) {
      jj_consume_token(SEM_SINAL);
      jj_consume_token(INTEIRO);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEM_SINAL:
        jj_consume_token(SEM_SINAL);
        break;
      default:
        jj_la1[25] = jj_gen;
        if (jj_2_5(2)) {
          jj_consume_token(LONGO);
          jj_consume_token(LONGO);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LONGO:
            jj_consume_token(LONGO);
            break;
          case INTEIRO:
            jj_consume_token(INTEIRO);
            break;
          case FLUTUANTE:
            jj_consume_token(FLUTUANTE);
            break;
          case CARACTERE:
            jj_consume_token(CARACTERE);
            break;
          case VAZIO:
            jj_consume_token(VAZIO);
            break;
          default:
            jj_la1[26] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  final public void ListaDeArgumentos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAIS:
    case MENOS:
    case MULTIPLICACAO:
    case E_BIT_A_BIT:
    case NAO:
    case ABRE_PARENTESES:
    case LITERAL_INTEIRO:
    case LITERAL_TEXTO:
    case IDENTIFICADOR:
      Expressao();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[27] = jj_gen;
          break label_12;
        }
        jj_consume_token(VIRGULA);
        Expressao();
      }
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
  }

// Hierarquia de expressões matemáticas e lógicas
  final public void Expressao() throws ParseException {
    item();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case E_LOGICO:
      case OU_LOGICO:
      case IGUAL:
      case DIFERENTE:
      case MENOR_IGUAL:
      case MAIOR_IGUAL:
      case MENOR:
      case MAIOR:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MENOR:
        jj_consume_token(MENOR);
        break;
      case MAIOR:
        jj_consume_token(MAIOR);
        break;
      case MENOR_IGUAL:
        jj_consume_token(MENOR_IGUAL);
        break;
      case MAIOR_IGUAL:
        jj_consume_token(MAIOR_IGUAL);
        break;
      case IGUAL:
        jj_consume_token(IGUAL);
        break;
      case DIFERENTE:
        jj_consume_token(DIFERENTE);
        break;
      case E_LOGICO:
        jj_consume_token(E_LOGICO);
        break;
      case OU_LOGICO:
        jj_consume_token(OU_LOGICO);
        break;
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      item();
    }
  }

  final public void item() throws ParseException {
    termo();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIS:
      case MENOS:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIS:
        jj_consume_token(MAIS);
        break;
      case MENOS:
        jj_consume_token(MENOS);
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      termo();
    }
  }

  final public void termo() throws ParseException {
    itemUnico();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
      case DIVISAO:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_15;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        jj_consume_token(MULTIPLICACAO);
        break;
      case DIVISAO:
        jj_consume_token(DIVISAO);
        break;
      default:
        jj_la1[34] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      itemUnico();
    }
  }

  final public void itemUnico() throws ParseException {
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIS:
      case MENOS:
      case MULTIPLICACAO:
      case E_BIT_A_BIT:
      case NAO:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_16;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIS:
        jj_consume_token(MAIS);
        break;
      case MENOS:
        jj_consume_token(MENOS);
        break;
      case NAO:
        jj_consume_token(NAO);
        break;
      case E_BIT_A_BIT:
        jj_consume_token(E_BIT_A_BIT);
        break;
      case MULTIPLICACAO:
        jj_consume_token(MULTIPLICACAO);
        break;
      default:
        jj_la1[36] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    Item();
  }

  final public void Item() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LITERAL_INTEIRO:
      jj_consume_token(LITERAL_INTEIRO);
      break;
    case LITERAL_TEXTO:
      jj_consume_token(LITERAL_TEXTO);
      break;
    default:
      jj_la1[37] = jj_gen;
      if (jj_2_6(2)) {
        jj_consume_token(IDENTIFICADOR);
        jj_consume_token(ABRE_PARENTESES);
        ListaDeArgumentos();
        jj_consume_token(FECHA_PARENTESES);
      } else if (jj_2_7(2)) {
        jj_consume_token(IDENTIFICADOR);
        jj_consume_token(ABRE_COLCHETES);
        Expressao();
        jj_consume_token(FECHA_COLCHETES);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          jj_consume_token(IDENTIFICADOR);
          break;
        case ABRE_PARENTESES:
          jj_consume_token(ABRE_PARENTESES);
          Expressao();
          jj_consume_token(FECHA_PARENTESES);
          break;
        default:
          jj_la1[38] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_3_5() {
    if (jj_scan_token(LONGO)) return true;
    if (jj_scan_token(LONGO)) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_scan_token(SEM_SINAL)) return true;
    if (jj_scan_token(INTEIRO)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(SEM_SINAL)) return true;
    if (jj_scan_token(LONGO)) return true;
    return false;
  }

  private boolean jj_3R_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) {
    jj_scanpos = xsp;
    if (jj_scan_token(12)) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) {
    jj_scanpos = xsp;
    if (jj_scan_token(10)) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(SEM_SINAL)) return true;
    if (jj_scan_token(LONGO)) return true;
    if (jj_scan_token(LONGO)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(ABRE_COLCHETES)) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(ABRE_PARENTESES)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_17()) return true;
    return false;
  }
